<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8D4703"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#683402">

            <ImageView
                android:id="@+id/plantPictureImageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/zombie_picture"
                android:scaleType="centerCrop"
                android:layout_margin="16dp"/>

            <ImageButton
                android:id="@+id/starButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:src="@drawable/ic_star_transparent" />

        </RelativeLayout>

        <TextView
            android:id="@+id/plantNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#E49B00"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FDC896"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/plantAbilityTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="#250380"
                    android:paddingStart="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/plantTerrainLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:text="@string/plant_terrain_label"
                    android:textColor="#985500"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/plantTerrainTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#A60402"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/plantDamageLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plant_damage_label"
                    android:textStyle="bold"
                    android:textColor="#985500"
                    android:paddingStart="10dp"/>

                <TextView
                    android:id="@+id/plantDamageTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="#A60402"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/plantDescriptionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:paddingStart="10dp"
                    android:textColor="#985500"
                    android:textStyle="bold"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingStart="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/plant_cost_label"
                    android:textStyle="bold"
                    android:textColor="#985500"/>

                <TextView
                    android:id="@+id/plantCostTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="#A60402"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" /> <!-- Add an empty TextView for spacing -->

                <TextView
                    android:id="@+id/plantRechargeLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.01"
                    android:text="@string/plant_recharge_label"
                    android:textColor="#985500"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/plantRechargeTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="#A60402"/>

            </LinearLayout>

            <!-- The rest of your existing code -->


        </LinearLayout>

    </LinearLayout>

</ScrollView>

</RelativeLayout>
